[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = "Python scripts used with video files"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
VapourSynth = "^65"
requests-toolbelt = "^1.0.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
ruff = "^0.2.2"
vspreview = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-preview.git", branch = "master" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
force-exclude = true
line-length = 120
select = ["E4", "E7", "E9", "F", "W"]

[tool.isort]
line_length = 118

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
